crates/slopty-proto/tests/snapshots/golden_project__golden_project__task_attempts.snap
---
source: crates/slopty-proto/tests/golden_project.rs
expression: hex(&bytes)
---
6e 00 00 00 01 15 00 40 06 73 6c 6f 70 74 79 03
02 01 10 01 99 a0 00 00 00 70 00 80 00 00 00 00
00 00 01 0c 7e 2f 73 72 63 2f 73 6c 6f 70 74 79
02 01 10 52 65 61 64 20 79 6f 75 72 20 62 72 69
65 66 2e 00 01 01 41 01 31 01 78 24 00 00 0c 7e
2f 73 72 63 2f 73 6c 6f 70 74 79 03 02 70 69 00
01 06 73 6f 6e 6e 65 74 00 01 01 41 01 31 01 78
24 00
