crates/slopty-proto/tests/snapshots/golden_project__golden_project__task_claim.snap
---
source: crates/slopty-proto/tests/golden_project.rs
expression: hex(&bytes)
---
28 00 00 00 01 15 00 25 06 73 6c 6f 70 74 79 03
01 1a 64 6f 63 73 2f 64 65 63 69 73 69 6f 6e 73
2f 70 72 6f 6a 65 63 74 73 2e 6d 64
