crates/slopty-proto/tests/snapshots/golden_project__golden_project__task_create.snap
---
source: crates/slopty-proto/tests/golden_project.rs
expression: hex(&bytes)
---
8d 00 00 00 01 15 00 23 06 73 6c 6f 70 74 79 01
02 05 62 75 69 6c 64 0c 53 65 72 76 65 72 20 73
74 6f 72 65 22 4b 65 65 70 20 70 72 6f 6a 65 63
74 73 20 62 65 73 69 64 65 20 77 6f 72 6b 65 72
73 2e 6a 73 6f 6e 2e 00 01 10 01 99 a0 00 00 00
70 00 80 00 00 00 00 00 00 01 01 22 63 61 72 67
6f 20 6e 65 78 74 65 73 74 20 72 75 6e 20 2d 70
20 73 6c 6f 70 74 79 2d 73 65 72 76 65 72 01 11
7b 22 6c 61 6e 65 22 3a 22 73 65 72 76 65 72 22
7d
