crates/slopty-proto/tests/snapshots/golden_project__golden_project__task_create_read_only.snap
---
source: crates/slopty-proto/tests/golden_project.rs
expression: hex(&bytes)
---
19 00 00 00 01 15 00 22 06 73 6c 6f 70 74 79 00
00 06 52 65 76 69 65 77 00 01 00 00 00
