crates/slopty-proto/tests/snapshots/golden_project__golden_project__task_merge.snap
---
source: crates/slopty-proto/tests/golden_project.rs
expression: hex(&bytes)
---
0c 00 00 00 01 15 00 36 06 73 6c 6f 70 74 79 03
