crates/slopty-proto/tests/snapshots/golden_project__golden_project__task_merged_unpushed_card.snap
---
source: crates/slopty-proto/tests/golden_project.rs
expression: hex(&bytes)
---
cc 02 00 00 03 01 02 05 62 75 69 6c 64 0c 53 65
72 76 65 72 20 73 74 6f 72 65 00 06 01 17 77 61
69 74 69 6e 67 20 6f 6e 20 61 20 70 65 72 6d 69
73 73 69 6f 6e 01 10 01 99 a0 00 00 00 70 00 80
00 00 00 00 00 00 01 10 01 99 a1 b1 c3 d4 70 00
80 00 00 00 00 00 ab cd 00 80 d8 c1 a2 8c 34 00
01 24 30 31 39 39 61 31 62 31 2d 63 33 64 34 2d
37 30 30 30 2d 38 30 30 30 2d 30 30 30 30 30 30
30 30 63 30 64 65 01 01 0f 73 6c 6f 70 74 79 2f
73 6c 6f 70 74 79 2f 33 01 0b 2f 77 2f 73 6c 6f
70 74 79 2d 33 01 00 2a 1e 68 74 74 70 73 3a 2f
2f 67 69 74 68 75 62 2e 63 6f 6d 2f 6f 2f 72 2f
70 75 6c 6c 2f 34 32 21 4b 65 65 70 20 70 72 6f
6a 65 63 74 73 20 62 65 73 69 64 65 20 77 6f 72
6b 65 72 73 2e 6a 73 6f 6e 04 6d 61 69 6e 04 02
01 0e 63 6c 69 70 70 79 20 28 6d 61 63 6f 73 29
01 01 00 10 63 6c 69 70 70 79 3a 20 32 20 65 72
72 6f 72 73 28 61 61 61 61 61 61 61 61 61 61 61
61 61 61 61 61 61 61 61 61 61 61 61 61 61 61 61
61 61 61 61 61 61 61 61 61 61 61 61 61 28 62 62
62 62 62 62 62 62 62 62 62 62 62 62 62 62 62 62
62 62 62 62 62 62 62 62 62 62 62 62 62 62 62 62
62 62 62 62 62 62 01 ca 01 88 8f 08 01 01 04 6d
61 69 6e 28 64 64 64 64 64 64 64 64 64 64 64 64
64 64 64 64 64 64 64 64 64 64 64 64 64 64 64 64
64 64 64 64 64 64 64 64 64 64 64 64 80 d8 c1 a2
8c 34 00 01 27 21 20 5b 72 65 6a 65 63 74 65 64
5d 20 6d 61 69 6e 20 2d 3e 20 6d 61 69 6e 20 28
66 65 74 63 68 20 66 69 72 73 74 29 01 02 10 01
99 a0 00 00 00 70 00 80 00 00 00 00 00 00 01 00
17 43 6f 6d 70 69 6c 69 6e 67 20 73 6c 6f 70 74
79 2d 73 65 72 76 65 72 00 80 d8 c1 a2 8c 34 01
10 01 99 a0 00 00 00 70 00 80 00 00 00 00 00 00
01 10 01 99 a1 b1 c3 d4 70 00 80 00 00 00 00 00
ab cd 00 01 10 01 99 a0 00 00 00 70 00 80 00 00
00 00 00 00 01 d0 82 2e 01 94 fb c1 a2 8c 34 00
00 00 00 80 d8 c1 a2 8c 34 88 ff c1 a2 8c 34 02
00 01 28 61 61 61 61 61 61 61 61 61 61 61 61 61
61 61 61 61 61 61 61 61 61 61 61 61 61 61 61 61
61 61 61 61 61 61 61 61 61 61 61 01 23 63 72 61
74 65 73 2f 73 6c 6f 70 74 79 2d 73 65 72 76 65
72 2f 74 65 73 74 73 2f 73 74 6f 72 65 2e 72 73
01 2b 63 72 61 74 65 73 2f 73 6c 6f 70 74 79 2d
73 65 72 76 65 72 2f 73 72 63 2f 68 75 62 2f 71
75 65 75 65 2f 74 65 73 74 73 2e 72 73 01 01 02
