crates/slopty-proto/tests/snapshots/golden_project__golden_project__task_proposed.snap
---
source: crates/slopty-proto/tests/golden_project.rs
expression: hex(&bytes)
---
39 02 00 00 03 01 02 05 62 75 69 6c 64 0c 53 65
72 76 65 72 20 73 74 6f 72 65 22 4b 65 65 70 20
70 72 6f 6a 65 63 74 73 20 62 65 73 69 64 65 20
77 6f 72 6b 65 72 73 2e 6a 73 6f 6e 2e 01 14 63
72 61 74 65 73 2f 73 6c 6f 70 74 79 2d 73 65 72
76 65 72 00 00 01 1b 6f 73 20 3d 3d 20 22 6c 69
6e 75 78 22 20 26 26 20 63 70 75 73 20 3e 3d 20
31 36 01 10 68 61 73 28 70 72 6f 62 65 73 2e 63
75 64 61 29 0a 01 00 01 01 01 10 01 99 a0 00 00
00 70 00 80 00 00 00 00 00 00 01 01 22 63 61 72
67 6f 20 6e 65 78 74 65 73 74 20 72 75 6e 20 2d
70 20 73 6c 6f 70 74 79 2d 73 65 72 76 65 72 01
11 7b 22 6c 61 6e 65 22 3a 22 73 65 72 76 65 72
22 7d 00 01 17 77 61 69 74 69 6e 67 20 6f 6e 20
61 20 70 65 72 6d 69 73 73 69 6f 6e 00 01 0f 73
6c 6f 70 74 79 2f 73 6c 6f 70 74 79 2f 33 01 0b
2f 77 2f 73 6c 6f 70 74 79 2d 33 01 28 62 62 62
62 62 62 62 62 62 62 62 62 62 62 62 62 62 62 62
62 62 62 62 62 62 62 62 62 62 62 62 62 62 62 62
62 62 62 62 62 01 2a 1e 68 74 74 70 73 3a 2f 2f
67 69 74 68 75 62 2e 63 6f 6d 2f 6f 2f 72 2f 70
75 6c 6c 2f 34 32 01 01 00 00 00 00 00 01 00 00
00 01 10 52 65 61 64 20 79 6f 75 72 20 62 72 69
65 66 2e 00 00 00 00 80 d8 c1 a2 8c 34 06 63 6c
61 75 64 65 01 10 01 99 a0 00 00 00 70 00 80 00
00 00 00 00 00 01 0d 6f 73 20 3d 3d 20 22 6d 61
63 6f 73 22 d0 82 2e 01 94 fb c1 a2 8c 34 00 80
d8 c1 a2 8c 34 88 ff c1 a2 8c 34 02 01 00 01 28
61 61 61 61 61 61 61 61 61 61 61 61 61 61 61 61
61 61 61 61 61 61 61 61 61 61 61 61 61 61 61 61
61 61 61 61 61 61 61 61 01 23 63 72 61 74 65 73
2f 73 6c 6f 70 74 79 2d 73 65 72 76 65 72 2f 74
65 73 74 73 2f 73 74 6f 72 65 2e 72 73 01 2b 63
72 61 74 65 73 2f 73 6c 6f 70 74 79 2d 73 65 72
76 65 72 2f 73 72 63 2f 68 75 62 2f 71 75 65 75
65 2f 74 65 73 74 73 2e 72 73 01 01 02
