crates/slopty-proto/tests/snapshots/golden_project__golden_project__task_proposed_card.snap
---
source: crates/slopty-proto/tests/golden_project.rs
expression: hex(&bytes)
---
c4 00 00 00 03 01 01 01 02 05 62 75 69 6c 64 0c
53 65 72 76 65 72 20 73 74 6f 72 65 00 00 01 17
77 61 69 74 69 6e 67 20 6f 6e 20 61 20 70 65 72
6d 69 73 73 69 6f 6e 00 01 0f 73 6c 6f 70 74 79
2f 73 6c 6f 70 74 79 2f 33 01 0b 2f 77 2f 73 6c
6f 70 74 79 2d 33 01 2a 1e 68 74 74 70 73 3a 2f
2f 67 69 74 68 75 62 2e 63 6f 6d 2f 6f 2f 72 2f
70 75 6c 6c 2f 34 32 01 01 00 00 00 00 00 00 01
80 d8 c1 a2 8c 34 06 63 6c 61 75 64 65 01 10 01
99 a0 00 00 00 70 00 80 00 00 00 00 00 00 01 0d
6f 73 20 3d 3d 20 22 6d 61 63 6f 73 22 d0 82 2e
01 94 fb c1 a2 8c 34 00 00 00 00 00 80 d8 c1 a2
8c 34 88 ff c1 a2 8c 34
